--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 			<scope>test</scope>
 		</dependency>
         <dependency>
-            <groupId>org.webjars</groupId>
+            <groupId>org.webjars.bower</groupId>
             <artifactId>bootstrap-material-design</artifactId>
             <version>4.0.2</version>
         </dependency>
