--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
 			<artifactId>feign-gson</artifactId>
 			<version>8.18.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-directory-provider</artifactId>
+			<version>9.0.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
