--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>infinispan-directory-provider</artifactId>
 			<version>9.0.1.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
