--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.tbell</groupId>
 	<artifactId>gigfinder</artifactId>
-	<version>0.0.1-PREDEPLOY</version>
+	<version>0.0.2-PREDEPLOY</version>
 	<packaging>jar</packaging>
 
 	<name>gigfinder</name>
@@ -85,7 +85,16 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-java8time</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
 	</dependencies>
 
 	<build>
