fixed map, made custom gig cards and musician cards

--- a/src/main/resources/deploy.properties
+++ b/src/main/resources/deploy.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://something/ebdb
+spring.datasource.url=jdbc:postgresql://aa1sr7wjv8m6rom.c6htjssqrls5.us-east-2.rds.amazonaws.com/ebdb
 spring.datasource.username=finaluser
 spring.datasource.password=finalpassword
 
